--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -2,7 +2,7 @@
 <html ng-app="blocJams">
 
 <head lang="en">
-  <meta charset="UTF-8">gin
+  <meta charset="UTF-8">
   <title>Bloc Jams Angular</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
